
* Bug fixes *
  - #4691, Fix segfault during gist index creation with empty geometries (Raúl Marín)
  - Fix handling of bad WKB inputs (Oracle types) and unit tests for
    malformed WKB. Remove memory leaks in malformed WKB cases. (Paul Ramsey)
  - #4740, Round values in geography_distance_tree
           as we do on geography_distance (Raúl Marín, Paul Ramsey, Regina Obe)



PostGIS 3.1.0alpha2
2020/07/18

Only tickets not included in 3.1.0alpha1

* New features *
  - #4656, Cast a geojson_text::geometry for implicit GeoJSON ingestion (Raúl Marín)
  - #4687, Expose GEOS MaximumInscribedCircle (Paul Ramsey)
  - #4710, ST_ClusterKMeans now works with 3D geometries (Darafei Praliaskouski)

* Enhancements *
  - #4675, topology.GetRingEdges now implemented in C (Sandro Santilli)
  - #4681, ST_GetFaceGeometry: print corruption information (Sandro Santilli)
  - #4651: ST_Simplify: Don't copy if nothing is removed (Raúl Marín)
  - #4657: Avoid De-TOASTing where possible (Paul Ramsey)
  - #4490, Tweak function costs (Raúl Marín)
  - #4672, Cache getSRSbySRID and getSRIDbySRS (Raúl Marín)
  - #4676, Avoid decompressing toasted geometries to read only the header (Raúl Marín)
           Optimize cast to Postgresql point type (Raúl Marín)
  - #4620, Update internal wagyu to 0.5.0 (Raúl Marín)
  - #4623, Optimize varlena returning functions (Raúl Marín)
  - #4677, Share gserialized objects between different cache types (Raúl Marín)
  - Fix compilation with MSVC compiler / Standardize shebangs (Loïc Bartoletti)

* Bug fixes *
  - #4652, Fix several memory related bugs in ST_GeomFromGML (Raúl Marín)
  - #4661, Fix access to spatial_ref_sys with a non default schema (Raúl Marín)
  - #4670, ST_AddPoint: Fix bug when a positive position is requested (Raúl Marín)
  - #4699, crash on null input to ST_Union(raster, otherarg) (Jaime Casanova, 2ndQuadrant)
  - #4716, Fix several issues with pkg-config in the configure script (Raúl Marín)

PostGIS 3.1.0alpha1
2020/02/01
